...
            //MockGhibliService().fetchFilm()
        
            let bannerULR = URL.convertAssetImage(named: "bannerImage")
            let posterULR = URL.convertAssetImage(named: "posterImage")
            
           return Film(id: "id",
                       title: "My Neighbor Totoro",
                       description: "Two sisters encounter friendly forest spirits in rural Japan.",
                       director: "Hayao Miyazaki",
                       producer: "Toru Hara",
                       releaseYear: "1988",
                       score: "93",
                       duration: "86",
                       image: posterULR?.absoluteString ?? "",
                       bannerImage: bannerULR?.absoluteString ?? "",
...
